Fix home on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ h1 {
 /** Home page **/
 
 .hero{
-  width:100%;
+  min-width:100%;
 }
 aside h1, aside h2, aside h3, aside p {
   color: #fff;
